[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
py36 = true
skip-string-normalization = true

[tool.poetry]
name = "fanalyse"
version = "0.1.0"
description = "Static FORTRAN analyzer"
authors = ["Jan Hermann <dev@janhermann.cz>"]
license = "MPL-2.0"
repository = "https://github.com/azag0/fanalyse"

[tool.poetry.dependencies]
python = "^3.6"
textx = "^1.8"

[tool.poetry.dev-dependencies]
ipykernel = "^5.1"
mypy = "^0.641.0"
lxml = "^4.2"
flake8 = "^3.5"
flake8-bugbear = "^18.8"
flake8-comprehensions = "^1.4"
flake8-quotes = "^1.0"
black = "^18.3-alpha.0"
pydocstyle = "^3.0"
pep8-naming = "^0.7.0"
isort = "^4.3"

[tool.poetry.scripts]
fanalyse = "fanalyse.cli:cli"
